--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -1,6 +1,6 @@
 <h5>Contact</h5>
 <p class="text-left">
-    If you have any problems or questions, please contact us via e-mail at:
+    If you have any queries, please contact us via e-mail at:
     <a href="mailto:{{ site.data.conference.email }}">
         <i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>
         {{ site.data.conference.email }}
