--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -6,3 +6,24 @@
         {{ site.data.conference.email }}
     </a>
 </p>
+
+<table class="table table-sm table-borderless">
+    <tbody>
+        <tr>
+            <td><strong>Dr. K. Kavitha</strong></td>
+            <td><i class="fa fa-phone fa-fw" aria-hidden="true"></i> +91 9443133000</td>
+        </tr>
+        <tr>
+            <td><strong>Dr. D. Usha</strong></td>
+            <td><i class="fa fa-phone fa-fw" aria-hidden="true"></i> +91 9486844111</td>
+        </tr>
+        <tr>
+            <td><strong>Dr. Elangovan</strong></td>
+            <td><i class="fa fa-phone fa-fw" aria-hidden="true"></i> +91 9840364556</td>
+        </tr>
+        <tr>
+            <td><strong>Ms. Prabha</strong></td>
+            <td><i class="fa fa-phone fa-fw" aria-hidden="true"></i> +91 8300719870</td>
+        </tr>
+    </tbody>
+</table>
