--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,25 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
         <footer class="pt-3 mt-2 border-top">
-            <div class="text-muted small pull-right pb-3">
-                &copy; {{site.data.conference.short_name}}.
-            </div>
-            <div class="text-muted font-italic font-weight-light small pull-left pb-3">
-                {% if site.show_last_updated %}
-                Last updated: {{ site.time | date: site.last_updated_format }}
-                {% endif %}
+            <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    <p class="text-muted small">
+                        <strong>Address:</strong><br>
+                        Department of Computer Science<br>
+                        Mother Teresa Women's University,<br>
+                        Kodaikanal, Tamil Nadu, India
+                    </p>
+                </div>
+                <div class="col-md-6 col-sm-12 text-right">
+                    <div class="text-muted small pb-3">
+                        &copy; {{site.data.conference.short_name}}.
+                    </div>
+                    <div class="text-muted font-italic font-weight-light small pb-3">
+                        {% if site.show_last_updated %}
+                        Last updated: {{ site.time | date: site.last_updated_format }}
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
