--- a/_includes/header.html
+++ b/_includes/header.html
@@ -78,8 +78,8 @@
 
     <div class="row">
         <!--navbar-->
-        <div class="mynav col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 sticky-top">
-            <nav class="nav navbar-dark bg-dark navbar-expand-lg">
+        <div class="mynav col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <nav class="nav navbar-dark bg-dark navbar-expand-lg sticky-top">
                 {% if site.data.conference.previous_iterations %}
                 <a class="navbar-brand ml-4 dropdown-toggle" href="#"
                     title="Previous Iterations of {{site.data.conference.short_name}}" role="button"
