Revert "sticky header"
This reverts commit 93752608bdbd3775173a302f46fe0ef3e9432862.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -75,14 +75,11 @@
             </div>
         </div>
     </div>
-</header>
 
-<!-- Sticky Navigation -->
-<nav class="navbar navbar-dark bg-dark navbar-expand-lg sticky-top shadow-sm">
-    <div class="container">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 offset-lg-1 col-xl-10 offset-xl-1">
-            <div class="row">
-                <div class="col-12">
+    <div class="row">
+        <!--navbar-->
+        <div class="mynav col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <nav class="nav navbar-dark bg-dark navbar-expand-lg sticky-top">
                 {% if site.data.conference.previous_iterations %}
                 <a class="navbar-brand ml-4 dropdown-toggle" href="#"
                     title="Previous Iterations of {{site.data.conference.short_name}}" role="button"
@@ -174,5 +171,4 @@
             </nav>
         </div>
     </div>
-</div>
-</nav>
+</header>
