--- a/assets/main.css
+++ b/assets/main.css
@@ -109,15 +109,10 @@ body {
 
 /* Sticky navigation */
 .sticky-top {
-    position: -webkit-sticky !important;
-    position: sticky !important;
-    top: 0 !important;
-    z-index: 1030 !important;
-}
-
-.navbar.sticky-top {
-    margin-bottom: 0;
-    box-shadow: 0 2px 4px rgba(0,0,0,.1);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 1020;
 }
 
 .list-group-item {
