Revert "sticky header"
This reverts commit c763179240e280081b6ae4c35514ebfbe7171f1e.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -78,7 +78,7 @@
 
     <div class="row">
         <!--navbar-->
-        <div class="mynav col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 sticky-top">
+        <div class="mynav col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <nav class="nav navbar-dark bg-dark navbar-expand-lg">
                 {% if site.data.conference.previous_iterations %}
                 <a class="navbar-brand ml-4 dropdown-toggle" href="#"
