--- a/assets/main.css
+++ b/assets/main.css
@@ -2,8 +2,28 @@ body {
     font-family: "Fira Sans", Arial, sans-serif !important;
 }
 
-.container {
-    padding: 0;
+.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.px-3 {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+}
+
+@media (min-width: 768px) {
+    .px-md-4 {
+        padding-left: 1.5rem !important;
+        padding-right: 1.5rem !important;
+    }
+}
+
+@media (min-width: 992px) {
+    .px-lg-5 {
+        padding-left: 2rem !important;
+        padding-right: 2rem !important;
+    }
 }
 
 .carousel {
