--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 
 <body>
 
-    <div class="container">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 offset-lg-1 col-xl-10 offset-xl-1">
+    <div class="container-fluid px-3 px-md-4 px-lg-5">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
             {% include header.html %}
             {{ content }}
             {% include footer.html %}
