--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,8 +12,6 @@ layout: page
 
         {{content}}
 
-        {% include contact-us.html %}
-
     </div>
     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
         <!-- news -->
@@ -22,6 +20,9 @@ layout: page
         <!-- important dates -->
         {% include card-important-dates.html %}
         <!-- ---------------- -->
+        <!-- contact -->
+        {% include contact-us.html %}
+        <!-- ------- -->
     </div>
 </div>
 
