corrections in committee

--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -18,11 +18,11 @@
             <td><i class="fa fa-phone fa-fw" aria-hidden="true"></i> +91 9486844111</td>
         </tr>
         <tr>
-            <td><strong>Dr. Elangovan</strong></td>
+            <td><strong>Dr. V. R. Elangovan</strong></td>
             <td><i class="fa fa-phone fa-fw" aria-hidden="true"></i> +91 9840364556</td>
         </tr>
         <tr>
-            <td><strong>Ms. Prabha</strong></td>
+            <td><strong>Ms. B. Prabha</strong></td>
             <td><i class="fa fa-phone fa-fw" aria-hidden="true"></i> +91 8300719870</td>
         </tr>
     </tbody>
