increased header height for hybrid mode

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
                 {% endif %}
                 <div class="row">
                     <div class="col">
-                        <h6 class="text-center mt-0 mb-1">(Hybrid Mode) </h6>
+                        <h6 class="text-center mt-0 mb-1">Hybrid Mode</h6>
                         <h6 class="text-center mt-0 mb-1">{{ site.data.conference.date }}</h6>
                         <p class="text-center mt-1 mb-0">
                             {{ site.data.conference.location }},<br>
